# ycwd

./: .gitignore  Cargo.toml  README.md  REUSE.toml  test.sh
.github/workflows/: test.yml
scripts/: set_cwd.sh  test.sh  test_path.sh
src/: main.rs  process_tree.rs
