# SPDX-FileCopyrightText: 2025 blinry <mail@blinry.org>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "ycwd"
description = "Helps replace xcwd on Wayland compositors"
version = "0.1.0"
authors = ["blinry <mail@blinry.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/blinry/ycwd"
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
procfs = "0.17.0"
